# pos-terminal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  styles.css
docs/: API.md  USER_GUIDE.md
src/: main.rs
src/components/: README.md  cart.rs  mod.rs  order_history.rs  payment_modal.rs  product_grid.rs  product_manager.rs
src/models/: README.md  mod.rs  order.rs  payment.rs  product.rs
